# clientapps-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
hacker_news/: Cargo.toml  Dioxus.toml
hacker_news/assets/: main.css  tailwind.css
hacker_news/src/: api.rs  main.rs
hacker_news/src/ui/: comment.rs  mod.rs  stories.rs  story_comment.rs  story_item.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
