[package]
name = "hacker_news"
version = "0.1.0"
authors = ["吴 <2473698581@qq.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-logger = "0.6.2"
futures = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
