[package]
name = "hn"
version = "0.1.0"
description = "Hackers News Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hn"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-log = { version = "2.0.0-rc", features = ["colored"] }
anyhow = "1.0.98"
dirs = "6.0.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
tracing = { version = "0.1.41", features = ["log"] }
